# resonate

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.claude/plans/: phase-1-resources-and-qss.md  phase-2-data-models.md  qq-music-player-blueprint.md
include/: main.hpp
include/gui/: clickable_slider.hpp  header.hpp  main_content.hpp  main_window.hpp  player_bar.hpp  sidebar.hpp  sidebar_item.hpp
include/utils/: logger.hpp
resources/: resources.qrc
resources/styles/: default.qss
src/: main.cpp
src/gui/: clickable_slider.cpp  header.cpp  main_content.cpp  main_window.cpp  player_bar.cpp  sidebar.cpp  sidebar_item.cpp
src/utils/: logger.cpp
ui/: header.ui  main_content.ui  main_window.ui  player_bar.ui  sidebar.ui  sidebar_item.ui
